# embient-cli

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish-deepanalysts.yml
deepalpha/: app.py  auth.py  context.py  main.py  ui.py
deepalpha/analysts/: technical.py
deepalpha/clients/: basement.py
deepalpha/prompts/analysts/: technical_analyst.md
deepalpha/prompts/spawns/: base.md
deepalpha/spawns/: agent_factory.py
deepalpha/trading_tools/: __init__.py
deepalpha/trading_tools/market_data/: __init__.py  candles.py  charts.py  indicators.py
deepalpha/widgets/: messages.py
embient/: __init__.py  __main__.py  _version.py  agent.py  app.py  app.tcss  auth.py  clipboard.py  config.py  context.py  file_ops.py  input.py  local_context.py  main.py  model_config.py  non_interactive.py  project_utils.py  sessions.py  textual_adapter.py  tools.py  trading_config.py  ui.py
embient/analysts/: __init__.py  fundamental.py  graph.py  signal.py  technical.py
embient/built_in_skills/memory-creator/: SKILL.md
embient/clients/: __init__.py  basement.py  park.py
embient/integrations/: __init__.py  daytona.py  modal.py  runloop.py  sandbox_factory.py
embient/middleware/: __init__.py  subagents.py  tool_errors.py
embient/prompts/analysts/: fundamental_analyst.md  signal_manager.md  supervisor.md  technical_analyst.md
embient/prompts/commands/: remember.md
embient/prompts/spawns/: base.md  monitoring.md  task.md
embient/prompts/system/: env_local.md  env_sandbox.md  system_prompt.md
embient/skills/: __init__.py  commands.py  load.py
embient/skills/built_in/skill-creator/: SKILL.md
embient/skills/built_in/skill-creator/scripts/: quick_validate.py
embient/spawns/: agent_factory.py  prompts.py
embient/trading_tools/: __init__.py  memory.py
embient/trading_tools/market_data/: __init__.py  candles.py  charts.py  indicators.py
embient/trading_tools/research/: __init__.py  economics.py  fundamentals.py  news.py  watchlist.py  web_search.py
embient/trading_tools/signals/: __init__.py  position_sizing.py  trading.py
embient/utils/: __init__.py  prompt_loader.py  retry.py
embient/widgets/: __init__.py  api_key_input.py  approval.py  autocomplete.py  chat_input.py  history.py  loading.py  messages.py  model_selector.py  status.py  thread_selector.py  todo_list.py  tool_renderers.py  welcome.py
examples/skills/arxiv-search/: SKILL.md
examples/skills/skill-creator/scripts/: init_skill.py
libs/deepanalysts/: pyproject.toml
libs/deepanalysts/deepanalysts/: __init__.py
libs/deepanalysts/deepanalysts/backends/: __init__.py  basement.py  composite.py  store.py  supabase_storage.py
libs/deepanalysts/deepanalysts/clients/: basement.py
libs/deepanalysts/deepanalysts/middleware/: __init__.py  _utils.py  filesystem.py  memory.py  skills.py  subagents.py  tool_errors.py
libs/deepanalysts/tests/: __init__.py  conftest.py  test_basement.py  test_composite_backend.py  test_prompt_sections.py  test_skills_middleware.py  test_store_backend.py  test_supabase_storage_backend.py  test_tool_errors.py
scripts/: check_imports.py
tests/: README.md
tests/integration_tests/: test_sandbox_factory.py  test_sandbox_operations.py
tests/unit_tests/: test_agent.py  test_args.py  test_autocomplete.py  test_config.py  test_end_to_end.py  test_file_ops.py  test_image_utils.py  test_imports.py  test_local_context.py  test_messages.py  test_org_context.py  test_sessions.py  test_textual_adapter.py  test_token_tracker.py  test_version.py
tests/unit_tests/skills/: test_commands.py  test_load.py
tests/unit_tests/tools/: test_fetch_url.py  test_memory.py
