[project]
name = "embient"
version = "0.1.2"
description = "Embient CLI - AI-powered trading assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepanalysts>=0.1.0",
    "langchain>=1.2.3,<2.0.0",
    "langchain-openai>=1.1.7,<2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",
    "requests",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.52",
    "tavily-python",
    "python-dotenv",
    "daytona>=0.113.0",
    "modal>=0.65.0",
    "markdownify>=0.13.0",
    "runloop-api-client>=0.69.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "textual>=1.0.0",
    "textual-autocomplete>=3.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.28.0",
    "tenacity>=8.2.0",
    "langchain-google-genai>=4.2.0",
]

[project.scripts]
embient = "embient:cli_main"

[dependency-groups]
dev = ["ruff>=0.14.13"]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "pytest-watcher>=0.3.4,<1.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "responses>=0.25.0",
    "build",
    "twine",
    "langchain-openai",
    "ruff>=0.9.7",
    "ty>=0.0.1,<1.0.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["embient*"]

[tool.setuptools.package-data]
embient = ["default_agent_prompt.md", "*.tcss", "py.typed"]

[tool.ruff]
line-length = 120
exclude = []

[tool.ruff.format]
docstring-code-format = true # Formats code blocks in docstrings

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",   # Core Python errors
    "I",   # Import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "S",   # security
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # Line too long (handled by formatter, prompts ok)
    "S101",   # assert (fine for invariants)
    "S110",   # try-except-pass (sometimes intentional)
    "S112",   # try-except-continue
    "RUF022", # __all__ not sorted
]
unfixable = ["B028"] # Rules that shouldn't be auto-fixed

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["embient"]

[tool.ruff.lint.pydocstyle]
convention = "google"        # Google-style docstrings
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "RUF001", "RUF059"]  # Security relaxed, unicode ok, unused vars
"libs/*" = ["B024", "B027", "S105", "F401", "S603", "S607", "RUF005"]  # Protocol patterns, test, subprocess
"embient/shell.py" = ["S602"] # Intentional shell usage
"embient/image_utils.py" = ["S603", "S607"]
"embient/local_context.py" = ["S603", "S607"]
"embient/integrations/modal_integration.py" = ["S602", "S603", "S604", "S607"]
"embient/core/api_credentials.py" = ["S603", "S607"]
"embient/utils.py" = ["S604", "S607"]
"embient/config.py" = ["E402"] # Import not at top
"embient/integrations/runloop.py" = [
    "F401",
    "B904",
] # Unused import (re-export), raise from
"embient/skills.py" = ["F821", "S102"] # Dynamic exec usage
"embient/tools.py" = ["E722", "S113"] # Bare except, request timeout
"embient/widgets/approval.py" = [
    "B007",
    "RUF001",
] # Unused loop var, unicode char

[tool.pytest.ini_options]
timeout = 10 # Default timeout for all tests (can be overridden per-test)

# Note: deepanalysts is now published to PyPI
# For local development, uncomment the following:
# [tool.uv.sources]
# deepanalysts = { path = "libs/deepanalysts", editable = true }
