[project]
name = "deepanalysts"
version = "0.2.5"
description = "LangChain/LangGraph middleware for building AI agents with memory, skills, and filesystem support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
authors = [{ name = "Ganchuluun Narantsatsralt", email = "tsatsralt@swifttech.cloud" }]
keywords = ["langchain", "langgraph", "agents", "middleware", "ai", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.2.3,<2.0.0",
    "langgraph>=0.2.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
    "wcmatch>=8.5.0",
]

[project.urls]
Homepage = "https://github.com/SKE-Labs/deepalpha-cli"
Documentation = "https://github.com/SKE-Labs/deepalpha-cli/tree/main/libs/deepanalysts"
Repository = "https://github.com/SKE-Labs/deepalpha-cli.git"
Issues = "https://github.com/SKE-Labs/deepalpha-cli/issues"

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "anyio>=4.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepanalysts*"]

[tool.setuptools.package-data]
deepanalysts = ["py.typed"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]
